# context-mode-rust

./: .gitignore  .mcp.json  BENCHMARK.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  openclaw.plugin.json  start.mjs
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json
.claude-plugin/skills/context-mode/: SKILL-claude.md  SKILL-codex.md  SKILL.md
.claude-plugin/skills/context-mode-ops/: SKILL.md  release.md  review-pr.md  validation.md
.claude-plugin/skills/context-mode/references/: anti-patterns.md
.claude-plugin/skills/ctx-stats/: SKILL.md
.claude-plugin/skills/diagnose/: SKILL.md
.claude-plugin/skills/improve-codebase-architecture/: LANGUAGE.md
.claude-plugin/skills/tdd/: deep-modules.md  interface-design.md  mocking.md  tests.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml  update-stats.yml
benches/: Cargo.toml
benches/src/: lib.rs
configs/antigravity/: GEMINI.md
configs/claude-code/: CLAUDE.md
configs/codex/: AGENTS.md  config.toml  hooks.json
configs/cursor/: context-mode.mdc  hooks.json
configs/gemini-cli/: GEMINI.md  settings.json
configs/jetbrains-copilot/: hooks.json  mcp.json
configs/kilo/: kilo.json
configs/kiro/: KIRO.md
configs/openclaw/: AGENTS.md  openclaw.json  openclaw.schema.json
configs/opencode/: opencode.json
configs/pi/: AGENTS.md
configs/qwen-code/: QWEN.md
configs/vscode-copilot/: copilot-instructions.md  hooks.json  mcp.json
configs/zed/: AGENTS.md
crates/adapters/: Cargo.toml
crates/adapters/src/: base.rs  client_map.rs  detect.rs  hook_runtime.rs  hooks_helpers.rs  lib.rs  shared.rs  types.rs
crates/adapters/tests/: adapter_contracts.rs  platform_adapter_tests.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: doctor.rs  hook.rs  main.rs  setup.rs
crates/core/: Cargo.toml
crates/core/src/: chunker.rs  db_schema.rs  embedding.rs  executor.rs  lib.rs  local_indexer.rs  local_searcher.rs  result_formatter.rs  runtime.rs  search.rs  security.rs  types.rs  vault.rs  watch_manager.rs  watcher.rs
crates/core/tests/: runtime_executor_tests.rs
crates/installer/: Cargo.toml
crates/installer/src/: main.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs  server.rs  tool_handlers.rs
crates/search/: Cargo.toml
crates/search/src/: auto_memory.rs  context_packer.rs  hybrid.rs  lib.rs  query.rs  ranking.rs  rrf.rs  unified.rs  vector_store.rs
crates/server/: Cargo.toml
crates/server/src/: dashboard.html  main.rs
crates/session/: Cargo.toml
crates/session/src/: analytics.rs  db.rs  extract.rs  lib.rs  persist_tool_calls.rs  project_attribution.rs  snapshot.rs  types.rs
crates/store/: Cargo.toml
crates/store/src/: cache.rs  chunking.rs  content_store.rs  lib.rs  reranking.rs  schema.rs  search_helpers.rs  types.rs  vocabulary.rs
crates/tools/: Cargo.toml
crates/tools/src/: batch.rs  code_analysis.rs  connectors.rs  context_stream.rs  execute.rs  fetch_index.rs  lib.rs  local_index.rs  register.rs  search.rs  snippet.rs  stats.rs  store_util.rs  vault.rs
crates/utils/: Cargo.toml
crates/utils/src/: exit_classify.rs  fetch_cache.rs  lib.rs  lifecycle.rs  paths.rs  truncate.rs
crates/vault/: Cargo.toml
crates/vault/src/: analytics.rs  ast_chunker.rs  ast_parser.rs  chunking.rs  code_parser.rs  config.rs  graph_store.rs  indexer.rs  lib.rs  markdown_parser.rs  path_utils.rs  resolver.rs  search.rs  symbol_graph.rs  types.rs
docs/: jetbrains-copilot.md  llms-full.txt  llms.txt  platform-support.md
docs/adapters/: openclaw.md
hooks/: ensure-deps.mjs  hooks.json  routing-block.mjs  suppress-stderr.mjs
skills/: UPSTREAM-CREDITS.md
skills/context-mode/: SKILL-claude.md  SKILL-codex.md  SKILL-copilot.md  SKILL-cursor.md  SKILL-gemini.md  SKILL.md
skills/context-mode-ops/: communication.md  marketing.md  tdd.md  triage-issue.md  validation.md
skills/context-mode/references/: patterns-javascript.md  patterns-python.md  patterns-shell.md
skills/ctx-doctor/: SKILL.md
skills/ctx-insight/: SKILL.md
skills/ctx-purge/: SKILL.md
skills/ctx-upgrade/: SKILL.md
skills/improve-codebase-architecture/: DEEPENING.md  INTERFACE-DESIGN.md  SKILL.md
skills/tdd/: SKILL.md
