[workspace]
members = ["crates/*"]
exclude = ["target"]
resolver = "3"

[workspace.package]
version = "1.2.5"
edition = "2024"
authors = ["ShmidtS"]
license = "Elastic-2.0"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
axum = "0.8"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
notify = "8.0"
rusqlite = { version = "0.39", features = ["bundled-full"] }
walkdir = "2.5"
tempfile = "3.19"
sha2 = "0.11"
hex = "0.4"
dirs = "6.0"
tower = "0.5"
once_cell = "1.19"
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
html2md = "0.2"

[profile.release]
lto = true
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
