[package]
name = "context-mode-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "context-mode"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
context-mode-core = { path = "../core" }
context-mode-utils = { path = "../utils" }

rusqlite = { workspace = true }
serde_json = { workspace = true }
