[package]
name = "context-mode-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
context-mode-core = { path = "../core" }
context-mode-store = { path = "../store" }
context-mode-session = { path = "../session" }
context-mode-search = { path = "../search" }
context-mode-vault = { path = "../vault" }
context-mode-tools = { path = "../tools" }
context-mode-adapters = { path = "../adapters" }
context-mode-utils = { path = "../utils" }

[dev-dependencies]
