[package]
name = "context-mode-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
which = "8.0"
context-mode-core = { path = "../core" }
context-mode-store = { path = "../store" }
context-mode-session = { path = "../session" }
context-mode-search = { path = "../search" }
context-mode-vault = { path = "../vault" }
context-mode-tools = { path = "../tools" }
context-mode-adapters = { path = "../adapters" }
context-mode-utils = { path = "../utils" }

[dependencies.rmcp]
version = "1.7"
features = ["server", "macros", "transport-io"]

[[bin]]
name = "context-mode-server"
path = "src/main.rs"

[dev-dependencies]
