[package]
name = "context-mode-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "context-mode-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
context-mode-core = { path = "../core" }
context-mode-utils = { path = "../utils" }

rusqlite = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tempfile = { workspace = true }
