[package]
name = "context-mode-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
html2md = { workspace = true }
dirs = { workspace = true }
context-mode-core = { path = "../core" }
context-mode-store = { path = "../store" }
context-mode-session = { path = "../session" }
context-mode-search = { path = "../search" }
context-mode-vault = { path = "../vault" }
context-mode-utils = { path = "../utils" }

[dev-dependencies]
