[package]
name = "context-mode-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
