[package]
name = "context-mode-vault"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
context-mode-core = { path = "../core" }
context-mode-utils = { path = "../utils" }
once_cell = { workspace = true }

[dev-dependencies]
